# SP_KOL_1

./: CMakeLists.txt  kol_1.c  kol_10.c  kol_11.c  kol_12.c  kol_14.c  kol_1_1.c  kol_2.c  kol_3.c  kol_4.c  kol_5.c  kol_6.c  kol_7.c  kol_8.c  kol_9.c  pomosni_char_func.c
