cmake_minimum_required(VERSION 3.23)
project(kolokviumska C)

set(CMAKE_C_STANDARD 99)

add_executable(kol_1 kol_1.c)
add_executable(kol_2 kol_2.c)
add_executable(kol_3 kol_3.c)
add_executable(kol_4 kol_4.c)
add_executable(kol_5 kol_5.c)
add_executable(kol_6 kol_6.c)
add_executable(kol_7 kol_7.c)
add_executable(kol_8 kol_8.c)
add_executable(kol_9 kol_9.c)
add_executable(kol_10 kol_10.c)
add_executable(kol_11 kol_11.c)
add_executable(kol_12 kol_12.c)
add_executable(kol_14 kol_14.c)

